refactored, restructured, cleaned up